--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ subjects:
 - !lcc 'Z'
 - !lcc 'BL'
 - !lcsh 'Carlile, Richard, 1790-1843'
+- GITenberg
 title: Life and Character of Richard Carlile
 url: http://www.gutenberg.org/ebooks/39123
